# cpc-rag

./: .gitignore  CLAUDE.md  PIPELINE_STATUS.md  QUICK_START_LOCAL.md  README.md  app.py  requirements-api.txt  requirements-streamlit.txt  requirements.txt
.streamlit/: config.toml
multiagente-cpc/: .fury  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runtime  README.md  newrelic.ini  pyproject.toml
multiagente-cpc/.agentic-rules/python/: python-security-patterns-rules_v1.md
multiagente-cpc/.github/workflows/: code-scanning.yml
multiagente-cpc/app/: __init__.py  __main__.py
multiagente-cpc/app/dummy/: __init__.py  views.py
multiagente-cpc/app/ping/: views.py
multiagente-cpc/app/rag/: __init__.py  config.py  embedder.py  pinecone_client.py  views.py
multiagente-cpc/telemetry/: metrics.py
multiagente-cpc/tests/: conftest.py  test_metrics.py  test_ping.py  test_rag.py
tools/: README.md
tools/api/: retrieval_endpoint.py
tools/cleanup/: __init__.py  auto_tag_metadata.py  fix_default_metadata.py  fix_duplicate_chunks.py  fix_fecha_format.py  fix_long_chunks.py  fix_metadata_inheritance.py  generate_summary_chunks.py  prepare_chunks.py  process_manual_downloads.py  rechunk_tabular_files.py  remove_tabular_chunks.py
tools/common/: __init__.py  config.py  google_auth.py  metadata_schema.py  utils.py
workflows/: README.md  change_detection.md  dataset_fetch.md  ingestion.md  metadata_extraction.md  rag_pipeline.md  rag_strategy_analysis.md  validation_and_reingest.md
(+37 files in other folders)
